--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/StalkerApps/emby.git"
+    "url": "https://github.com/vnicorici/Emby.git"
   },
   "config": {
     "type": "app",
