--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.6.0",
   "description": "Emby server",
   "author": {
-    "name": "StalkerApps"
+    "name": "vnicorici"
   },
   "repository": {
     "type": "git",
@@ -15,7 +15,7 @@
     "category": "apps",
     "backgroundColor": "#171717",
     "name": "EMBY",
-    "legacy": true,
+    "legacy": false,
     "description": "Emby server",
     "icons": {
       "paths": {
